# CSC10008_ComputerNetworking

./: .gitignore  authorization.json  readme.md  test.cpp  ver2.cpp  ver3.cpp
ControlledMachine/Client/: Client.sln
ControlledMachine/Client/Client/: CMakeLists.txt  Client.cpp  Client.vcxproj  Client.vcxproj.filters  ClientTestWithoutEmail.cpp  EmailMonitor.cpp  EmailMonitor.h  GmailAPI.cpp  GoogleDriveAPI.cpp  GoogleOAuth.cpp  UI.cpp  UI.h  listApp.txt  listServices.txt  log.txt  parameters.txt  test.cpp  testUpload.txt
ControlledMachine/Client/Client/Debug/: vc143.idb
ControlledMachine/Client/Client/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Client.lastbuildstate
ControlledMachine/Client/Client/giao dien/: index.html  script.js  server.cpp  style.css
ControlledMachine/Client/Client/giaoDien/: CMakeLists.txt  UI.cpp  index.html  main.cpp  style.css
ControlledMachine/Client/Client/giaoDien/fltk/fltk-1.4.0-1/: configure  fltk.spec
ControlledMachine/Client/Client/x64/Debug/: Client.exe.recipe  Client.ilk  vc143.idb
ControlledMachine/Client/Client/x64/Debug/Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ControlledMachine/Server/: Server.sln
ControlledMachine/Server/Server/: CMakeLists.txt  Server.cpp  Server.vcxproj  Server.vcxproj.filters  Utility.cpp  Utility.h  Utility0.cpp  Utility0.h  WebcamRecorder.cpp  WebcamRecorder.h  build.bat  compile.bat  index.html  listApp.txt  listservices.txt  log.txt  service.cpp  style.css  test.cpp  testKeylogger.cpp
ControlledMachine/Server/Server/Debug/: vc143.idb
ControlledMachine/Server/Server/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Server.lastbuildstate
ControlledMachine/Server/Server/delete/: Utility1.cpp  service_copy.cpp
ControlledMachine/Server/Server/x64/Debug/: Server.exe.recipe  Server.ilk  vc143.idb
ControlledMachine/Server/Server/x64/Debug/Server.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Server.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Controller/: EmailMonitor.cpp  EmailMonitor.h  GmailAPI.cpp  GmailAPI.h  GoogleOAuth.cpp  main.cpp  main.txt  refreshToken.env  run.txt
Controller/lib/curl/lib/pkgconfig/: libcurl.pc
Final/: readme.md
Final/Client/Release/: parameters.txt
Final/Client/SourceCode/: CMakeLists.txt  Client.cpp  EmailMonitor.cpp  EmailMonitor.h  UI.cpp  UI.h  stdafx.h
Final/Server/SourceCode/: WebcamRecorder.cpp  service.cpp
Final/Server/SourceCode/lib/opencv4/: vcpkg.spdx.json
Final_Final_Finale_13/Client/SourceCode/: GoogleDriveAPI.h  GoogleOAuth.h  build.bat  compile.bat  getParameters.cpp
Final_Final_Finale_13/Server/SourceCode/: CMakeLists.txt  Server.cpp  Utility.cpp  Utility.h  build.bat  targetver.h
Final_Final_Finale_13/Server/SourceCode/lib/opencv4/: OpenCVModules.cmake  vcpkg_abi_info.txt
